--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 </head>
 
 <body>
+    <header>
+        <img class="photo" src="./assets/images/photo.png" alt="photo">
+        <div class="texteheader">
+            <h1>Eden DANGLOT</h1>
+            <h2>Développeur Web et Web Mobile</h2>
+            <p><a href="mailto:edendanglot@eden.fr" class="email">&#9993 edendanglot@eden.fr</a>
+            <a href="tel:123-456-7890" class="email">&#9990; 123-456-7890</a>
+            <a href="https://www.google.com/maps/place/55+Rue+du+Faubourg+Saint-Honor%C3%A9,+75008+Paris/@48.8701266,2.3140035,721m" class="email">&#10224; 55 Rue de Paris, 75008 Paris</a></p>
+        </div>
+    </header>
 </body>
 
 </html>
+
