Ajout de la sidebar

--- a/index.html
+++ b/index.html
@@ -19,7 +19,59 @@
             <a href="https://www.google.com/maps/place/55+Rue+du+Faubourg+Saint-Honor%C3%A9,+75008+Paris/@48.8701266,2.3140035,721m" class="email">&#10224; 55 Rue de Paris, 75008 Paris</a></p>
         </div>
     </header>
+    <main>
+            <div class="sidebar">
+                <nav>
+                    <h3>Compétences</h3><hr>
+                        <div class="competence">
+                            <span><strong>HTML</strong></span>
+                            <span class="niveau">★★★★☆</span>
+                        </div>
+                        <div class="competence">
+                            <span class="nom"><strong>CSS</strong></span>
+                            <span class="niveau">★★★★☆</span>
+                        </div>
+                        <div class="competence">
+                            <span class="nom"><strong>Javascript</strong></span>
+                            <span class="niveau">★★☆☆☆</span>
+                        </div>
+                        <div class="competence">
+                            <span class="nom"><strong>PHP</strong></span>
+                            <span class="niveau">★☆☆☆☆</span>
+                        </div>
+                </nav>
+                <nav>
+                    <h3>Langues</h3><hr>
+                        <div class="langue">
+                            <span class="nom"><strong>Français</strong></span>
+                            <span>Langue maternelle</span>
+                        </div>
+                        <div class="langue">
+                            <span class="nom"><strong>Anglais</strong></span>
+                            <span>Professionnel</span>
+                        </div>
+                </nav>
+                <nav>
+                    <h3>Qualités</h3><hr>
+                        <ul>
+                            <li>Esprit d'équipe</li>
+                            <li>Autonomie</li>
+                            <li>Organisation</li>
+                            <li>Créativité</li>
+                        </ul>
+                </nav>
+                <nav>
+                    <h3>Centres d'intérêt</h3><hr>
+                        <ul>
+                            <li>Yoga</li>
+                            <li>Tennis</li>
+                            <li>Ecologie</li>
+                        </ul>
+                </nav>
+            </div>
+    </main>
 </body>
 
 </html>
+
 
