Ajout du profil

--- a/index.html
+++ b/index.html
@@ -69,9 +69,24 @@
                         </ul>
                 </nav>
             </div>
+            <div class="profil">
+                <h3>Profil</h3><hr>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h3>Formations</h3><hr>
+                    <p class="profilnom"><strong>Titre Professionnel DWWM</strong>, <i>Centre Européen de Formation</i> <i class="date">2025/2026</i></p>
+                <h3>Stages</h3><hr>
+                    <p class="profilnom"><strong>Fabrication de boissons</strong>, <i>Domaine Pujol</i> <i class="date2">2016</i></p>
+                    <p class="profilnom"><strong>Support pour logiciel</strong>, <i>Ent. informatique</i> <i class="date2">2016</i></p>
+                <h3>Expériences professionnelles</h3><hr>
+                    <p class="profilnom"><strong>Fabrication de boissons</strong>, <i>Domaine Pujol</i> <i class="date2">2016</i></p>
+                    <p class="profilnom"><strong>Ouvrier de chantier</strong><i class="date3">2022</i></p>
+                    <p class="profilnom"><strong>Technicien hospitalier</strong>, <i>Hospices civils de Lyon</i> <i class="date4">2024</i></p>
+                    <p class="profilnom"><strong>Technicien hospitalier</strong>, <i>Consort Group France</i> <i class="date4">2025</i></p>
+            </div>
     </main>
 </body>
 
 </html>
+
 
 
