Ajout du footer

--- a/index.html
+++ b/index.html
@@ -83,10 +83,11 @@
                     <p class="profilnom"><strong>Technicien hospitalier</strong>, <i>Hospices civils de Lyon</i> <i class="date4">2024</i></p>
                     <p class="profilnom"><strong>Technicien hospitalier</strong>, <i>Consort Group France</i> <i class="date4">2025</i></p>
             </div>
+    <footer>
+        <a href="https://www.github.com/dummy1066738"><img src="./assets/images/github.png" alt="github"></a>
+        <a href="https://www.twitter.com/dummy1066738"><img src="./assets/images/twitter.png" alt="twitter"></a>
+        <p><i>Mis à jour le : 04/08/2024</i></p>
+    </footer>
     </main>
 </body>
-
 </html>
-
-
-
