Rendre l'image cliquable

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <img class="photo" src="./assets/images/photo.png" alt="photo">
+        <a href="./assets/images/photo.png"><img class="photo" src="./assets/images/photo.png" alt="photo"></a>
         <div class="texteheader">
             <h1>Eden DANGLOT</h1>
             <h2>Développeur Web et Web Mobile</h2>
@@ -91,3 +91,4 @@
     </main>
 </body>
 </html>
+
