Ajout ligne de référence vers le favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="CV de développeur web/web mobile">
     <title>CV de développeur web/web mobile</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link ref="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -91,4 +92,5 @@
     </main>
 </body>
 </html>
+
 
